--- a/react-app/sass/extended/_light-theme-color.scss
+++ b/react-app/sass/extended/_light-theme-color.scss
@@ -1,3 +1,8 @@
+// Colors
+$white: white;
+$black: black;
+
+// Light Theme Colors
 $light-theme-primary-color: #373a3c;
 $light-theme-secondary-color: #e4e6e8;
 $light-theme-muted-color: #6c757d;
