--- a/react-app/sass/extended/_main.scss
+++ b/react-app/sass/extended/_main.scss
@@ -1,5 +1,7 @@
 #main {
-    background-color: white;
+    width: 100%;
+    background-color: $white;
     height: 100vh;
-    color: black;
+    color: $black;
+    z-index: 9999;
 }
